--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 
         <p class="view"><a href="https://github.com/manognavemulapati">View My GitHub Profile</a></p>
+<p class="view"><a href="https://github.com/manognavemulapati/manognavemulapati.github.io/blob/master/HMMScaling.pdf">Scaling</a></p>
 
       </header>
       <section>
