Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
   <body>
     <div class="wrapper">
       <header>
+        <h1>Manognavemulapati.GitHub.io</h1>
         <p></p>
 
 
         <p class="view"><a href="https://github.com/manognavemulapati">View My GitHub Profile</a></p>
-<p class="view"><a href="https://github.com/manognavemulapati/manognavemulapati.github.io/blob/master/HMMScaling.pdf">Scaling</a></p>
 
       </header>
       <section>
-        <p>Manogna Vemulapati's Github Page</p>
+        <p>Manogna Vemulapati's Github Page
+<a href="https://github.com/manognavemulapati/manognavemulapati.github.io/blob/master/HMMScaling.pdf">scaling</a></p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
